--- a/shop-managament/.env.example
+++ b/shop-managament/.env.example
@@ -27,6 +27,14 @@ DB_CONNECTION=sqlite
 # DB_USERNAME=root
 # DB_PASSWORD=
 
+DB_CONNECTION=mysql
+DB_HOST=mysql.railway.internal
+DB_PORT=3306
+DB_DATABASE=railway
+DB_USERNAME=root
+DB_PASSWORD=GzpDsVYNfzoPpFKYGzXVZOhLmhkJpbLF
+
+
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
